Add tagesschau + tagesspiegel feeds

--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>openstart.org</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>openstart.org</title>
 </head>
 <body>
-    <header>
-        <h1>openstart.org</h1>
-        <form action="" method="get">
-            <input type="search" name="" id="">
-            <button type="button">suchen!</button>
-        </form>
-    </header>
-    <main>
-
-    </main>
-    <footer>
-        <a href="impressum.html">Impressum</a>
-    </footer>
-
+  <header>
+    <h1>openstart.org</h1>
+    <form action="https://duckduckgo.com/?q=" method="get">
+      <input type="search" name="" id="">
+      <button type="button">suchen!</button>
+    </form>
+  </header>
+  <main>
+    <div class="news">
+      <div class="tagesschau"></div>
+      <div class="tagesspiegel"></div>
+    </div>
+  </main>
+  <footer>
+    <a href="impressum.html">Impressum</a>
+  </footer>
+  <script type="module" src="news.js"></script>
 </body>
 </html>
